# bot_10k

./: .env.example  .gitignore  CLAUDE.md  COMO_INICIAR.md  Cargo.toml  LIST_BOTS.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  RUST_VERSION.md  SETUP_COMPLETO.md  UPDATE_RUST_MANUALLY.md  demo_trader.py  demo_with_telegram.py  hyrotrader.service  hyrotrader_strategy_improved.md  install_service.sh  restart_bot.sh  rust.md  rust_implementation_guide.md  stop_all_bots.sh  test_bybit_connection.sh
src/: bot.rs  config.rs  lib.rs  main.rs  types.rs
src/exchange/: binance.rs  bybit.rs  mod.rs
src/execution_v2/: dynamic_tp.rs  mod.rs  news_calendar.rs  smart_entry.rs
src/intelligence/: asset_ranker.rs  confluence_scorer.rs  market_regime.rs  mod.rs
src/monitoring/: alert_system.rs  health_checker.rs  mod.rs  performance_metrics.rs
src/risk_v2/: adaptive_sizing.rs  correlation_matrix.rs  mod.rs  streak_detector.rs
