[package]
name = "hyrotrader-bot"
version = "0.1.0"
edition = "2021"
rust-version = "1.83"

[dependencies]
# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Decimal precision for financial calculations
rust_decimal = "1.36"
rust_decimal_macros = "1.36"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# HTTP client for API calls and Telegram
reqwest = { version = "0.12", features = ["json"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Configuration
dotenv = "0.15"
config = "0.14"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Environment variables
envy = "0.4"

# Async trait
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
